--- a/src/scss/Splash.scss
+++ b/src/scss/Splash.scss
@@ -6,58 +6,4 @@
   p{
     font-size: 60%;
   }
-  .Begin{
-    flex: 1 0 100%;
-    height: 100%;
-    width: 100%;
-    color: #DBDBDB;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    font-weight: 600;
-    font-size: 200%;
-    text-shadow: 3px 3px 6px black;
-
-    .description-container{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 60%;
-      background-color: rgba(0,0,0,0.5);
-      margin-top: 3rem;
-      border-radius: 1rem 1rem 0 0;
-      .headshot{
-        position: relative;
-        height: 10rem;
-        width: 10rem;
-        margin-top: 4rem;
-        border-radius: 50%;
-        object-fit: cover;
-        object-position: center -20%;
-        background-color: rgba(0,0,0,0.8);
-      }
-      .garden{
-        //background-color: rgba(0,0,0,0.5);
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: auto;
-        //.contrib-number{
-        //  color: #BEDCFE;
-        //  text-shadow: 3px 3px 6px black;
-        //}
-      }
-      .description{
-        margin-top: 2rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 50%;
-        p{
-          margin-top: 1rem;
-        }
-      }
-    }
-  }
 }
